--- a/src/pages/donate.mdx
+++ b/src/pages/donate.mdx
@@ -21,6 +21,8 @@ Whether you're a longtime member or a new visitor, your generosity helps us main
 
 * Check made payable to: <span class="font-mono">The Swimming Gild of Arden Inc</span>
 
-* [Venmo](https://venmo.com/Arden-Swim?txn=pay)
+* **Venmo** [@Arden-Swim-Club](https://venmo.com/Arden-Swim-Club?txn=pay)
+
+* **Square** [Donate with Square](https://square.link/u/YYYaeRDH)
 
 Have questions or want to donate in another way? Contact us via one of the methods listed above.
