--- a/src/pages/eats.mdx
+++ b/src/pages/eats.mdx
@@ -5,7 +5,7 @@ menu: main
 ---
 import E from '../components/E.astro'
 
-## **🍔 Arden Swim Club Food Options – Summer 2025 🍦**
+## **🍔 Arden Swim Club Food Options – Summer 2026 🍦**
 
 We’re excited to keep you fueled and refreshed all summer long with a variety of food offerings for our members\!
 
@@ -33,36 +33,12 @@ This service lets you enjoy a fun evening at the pool—**without the stress of 
 
 ---
 
-## **☕ New for 2025: Sharky’s Café**
+## **☕ Sharky’s Café**
 
-We’re thrilled to debut **Sharky’s Café**, located in the **Lower Gild Hall**, on **select dates this summer**.
+We’re thrilled to bring back **Sharky’s Café**, located in the **Lower Gild Hall**, on **select dates this summer**.
 
-For the first time, we’ll be using the hall’s kitchen to prepare **fresh, hot meals** for our members.  
+We’ll be using the hall’s kitchen to prepare **fresh, hot meals** for our members.  
 👉 **Stay tuned—more details coming soon\!**
-
----
-
-## **💳 Payment Options – Prepaid is Easy & Convenient**
-
-The **preferred payment method** for all food options is **prepayment through your eSoft account**.
-
-**To add funds:**
-
-1. Log in to your eSoft account.
-
-2. Click **"Fund My Account"** in the top menu bar.
-
-3. Enter the amount and your credit card details.
-
-4. Click **"Purchase"** to complete.
-
-5. Your balance will appear under **"My Account" \> "Account Balance."**
-
-💡 Each purchase deducts automatically from your balance. You'll also receive an **email receipt** for every transaction.
-
-**Note:** Prepaid accounts are **optional** and offered as a convenience to members.
-
-Need help setting it up? Just ask—we’re happy to assist\!
 
 ---
 
