--- a/src/pages/events/baby-pool-hour.mdx
+++ b/src/pages/events/baby-pool-hour.mdx
@@ -7,11 +7,9 @@ import E from '@/components/E.astro';
 
 ## 👶 Baby Pool Early Hour
 
-**New for Summer 2025\!**
+We’re excited to continue **earlier access to our baby pool**—just for members\!
 
-We’re excited to announce **earlier access to our baby pool**—just for members\!
-
-🕚 **Starting this summer**, the **baby pool will open one hour early** on **Monday, Wednesday, and Friday mornings from 11:00 AM to 12:00 Noon**.
+🕚 **This summer**, the **baby pool will open one hour early** on **Monday, Wednesday, and Friday mornings from 11:00 AM to 12:00 Noon**.
 
 This added time is **included with your membership**—no extra cost\!
 
