--- a/src/pages/pool-rules.mdx
+++ b/src/pages/pool-rules.mdx
@@ -60,6 +60,14 @@ in disciplinary action, including suspension of privileges or membership cancell
 1. **No pets**, bikes, or skateboards in the pool area.
 1. Arden Swim Club is **not responsible for accidents or property loss**.
 
+--
+
+## 📷 Photography & Video Policy
+For the safety and privacy of all members, taking photos or recording video of other people
+without prior permission from a parent or guardian is strictly prohibited. Any member
+found violating this policy may have their pool privileges suspended or revoked. We appreciate
+your cooperation in keeping our pool a safe and welcoming environment for everyone.
+
 ---
 
 ## 🏊 Use of the Pool
