--- a/src/pages/hours/closed-for-swim-meets.mdx
+++ b/src/pages/hours/closed-for-swim-meets.mdx
@@ -7,7 +7,7 @@ import E from '@/components/E.astro'
 
 Arden Swim Club will be hosting home swim meets on the following dates:
 
-June 17, June 24, and July 1
+*Dates to be determined.*
 
 **On these days, the pool will close at <u>4pm</u>**
 
@@ -15,10 +15,12 @@ To ensure continued access to swimming, we’ve arranged for our members to use 
 
 ### Alternative Pool Access
 
+*Dates and alternative pools to be determined.*
+{/* 
 | Date | Pool | Address |
 | - | - | - |
 |June 17|Ashbourne Swim Club|900 Darley Rd, Wilmington, DE 19810|
 |June 24|Del Vets Swim Club|2535 Veterans Drive, Wilmington, DE 19810|
-|July 1|Windybush Swim Club|1635 Windybush Rd, Wilmington, DE 19810|
+|July 1|Windybush Swim Club|1635 Windybush Rd, Wilmington, DE 19810| */}
 
 Thank you for your understanding and support of our swim team. We hope you’ll come out and cheer them on!
