--- a/src/pages/membership/index.mdx
+++ b/src/pages/membership/index.mdx
@@ -6,49 +6,34 @@ title: 'Memberships Information'
 
 ---
  
-import HowToJoin from './how-to-join.mdx';
 import { withBase } from '@/utils/url';
 import Link from '@/components/ui/link.astro';
 
 # 🏊 Arden Swim Club Membership
 
-Memberships are available for **individuals, couples, and families of all sizes**.
+You don't have to live in Arden to join our pool—everyone is invited! Come enjoy a summer of swimming and fun in our welcoming community space.
 
-We also offer **discounts for eligible members** — see below for details.
+Memberships are available for individuals, couples, and families of all sizes. 
 
+Arden Swim Club Summer 2026 Rates
 
-## **✅ How to Join**
+|Membership|Price|
+|-|-|
+|One Person|                    $421.00|
+|Two People|                    $566.00|
+|Three People|                 $669.00|
+|Four People|                   $745.00|
+|Five People+|                  $780.00|
 
-All members must register annually using our secure membership software:  
+**  Only household members
 
-<Link href="https://www.esoftplanner.com/v3/planner/login.php?access=0dG81LSVxNmo65bCzW57uZyIpg==">👉 Log in to eSoft</Link>
+Children 3 and under are free and do not need to be included in the membership count
 
-⚠️ **Important:** **Before visiting the pool**, you **must** complete your online membership registration.
+To sign up for a pool membership, please complete our online registration form using the link below. All memberships must be submitted through this form to ensure we have accurate and complete information for the upcoming season.
 
-If your registration is not finalized, our lifeguards will not be able to check you in — this is a safety and security requirement.
+ign up here: https://tinyurl.com/ardenswim2026
 
-### Steps to Register
-
-1. **Log in** (**or Sign Up)** to your eSoft account .
-
-   * Forgot your login or password? We can help you recover it — just reach out.
-
-2. **Choose your membership level** based on your household size.
-
-   * Options available for individuals, couples, and families.
-
-   * **Bondholders** in good standing may select the *Bond Membership* to apply their discount.
-
-3. **Click “Sign Up”** next to the membership that fits your needs.
-
-4. **Optional:** Add guest passes to your account.
-
-5. **Proceed to payment:**
-
-   * Pay online via credit card, or
-
-   * Select **"Mail Check"** and contact us to make alternative payment arrangements.  
-
+🔐
 
 ---
 
@@ -58,30 +43,16 @@ Bonds are **no longer required** and **no longer sold** for new members.
 
 If you already hold a bond in good standing, your bondholder discount **will still be honored**.
 
-## 💳 View Membership Options
-
-For the most up-to-date membership pricing and options, visit our **secure membership portal**:
-
-<p>
-<Link href="https://www.esoftplanner.com/v3/planner/memberships.php?access=0dG81LSVxNmo65bCzW57uZyIpg==" 
-    blank={true} >👉 View Membership Options</Link>
-</p>
-
 ## 🚫 Day Passes
 
 Due to changes in our insurance policy, **walk-up day passes are no longer available**.
 
-## ❗ Final Notes
+## NO Half Price / Half Season Memberships
 
-Your membership **must be completed online** in order for you to enter the pool. 
+In past years, we offered half-price pool memberships beginning July 15 through the end of the summer season. As announced last season, because many of our operating expenses occur at the start of the summer and we need confirmed membership numbers to properly plan and budget, we will no longer be offering mid-season discounted memberships. 
 
-{/* Our lifeguards cannot check you in if you have not registered in the system. */}
+We appreciate your understanding as we work to manage costs responsibly and maintain a high-quality experience for all members.
 
-If your registration is not finalized, our lifeguards will not be able to check you in.
-
-Have questions or need help? <a href={withBase('contact')}>Contact us</a> — we're happy to assist!
-{/* 
-<strike>
 ## Guest Policy
 
 Members are welcome to bring guests!  
@@ -91,6 +62,6 @@ All guests must be **accompanied by a current Arden Swim Club member**.
 - **Guest fee:** $5 per guest, ages 3 and up  
 - Each local individual may be signed in as a guest **up to six times per summer season**
 
-</strike> */}
+Have questions or need help? <a href={withBase('contact')}>Contact us</a> — we're happy to assist!
 
 We look forward to seeing you at the pool! 💦
